--- a/20210407_Parkeretal2021_Cdt1LLPS.ipynb
+++ b/20210407_Parkeretal2021_Cdt1LLPS.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "#IUPRED2\n",
+    "#The IUPRED2 code is from: Analyzing Protein Disorder with IUPRED2A, Gabor Erdos, Zsuzsanna Dosztanyi, Current Protocols in Bioinformatics 2020;70(1):e99"
     "\n",
     "import sys\n",
     "import textwrap\n",
